# api.yaml
@@ -335,7 +335,7 @@ paths:
                 type: object
                 properties:
                   items:
-                    description: List of audited and confirmed ballot receipts.
+                    description: List of receipts.
                   pagination:
                     type: object
                     properties:
@@ -362,11 +362,11 @@ paths:
         - Public Endpoints
       responses:
         200:
-          description: Successfully fetched ballot receipt. May be a Confirmed or Audited receipt; the spec shows an Audited receipt.
+          description: Successfully fetched ballot receipt. May be any kind of receipt; the spec shows an Unconfirmed receipt.
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AuditedReceipt"
+                $ref: "#/components/schemas/UnconfirmedReceiptStub"
         404:
           $ref: "#/components/responses/NotFound"
   /elections/{electionID}/{questionID}/totals:
@@ -496,7 +496,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/UnconfirmedReceipt"
+                  $ref: "#/components/schemas/UnconfirmedReceiptFull"
         404:
           $ref: "#/components/responses/NotFound"
   /elections/{electionID}/votes/audit:
@@ -567,9 +567,6 @@ components:
       name: auth_token
   # Payload Schemas
   schemas:
-    ID:
-      type: string
-      example: 6220e27c5f06ce6366456650
     AdminCredentials:
       type: object
       properties:
@@ -630,7 +627,7 @@ components:
       type: object
       properties:
         id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         description:
           type: string
         constraints:
@@ -647,7 +644,7 @@ components:
         - constraints
         - candidates
       example:
-        id: 6220e3b1069d947c996b5f7a
+        id: 12
         description: Course Representative (Computer Science)
         constraints:
           Courses:
@@ -683,7 +680,7 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/ID'
+          type: integer
         name:
           type: string
         state:
@@ -698,7 +695,7 @@ components:
         - start_time
         - end_time
       example:
-        id: 6220e3b1069d947c996b5f7a
+        id: 5
         name: Course Representatives
         state: Published
         start_time: "2022-03-10T00:00:00Z"
@@ -751,7 +748,7 @@ components:
       type: object
       properties:
         id:
-          $ref: '#/components/schemas/ID'
+          type: integer
         name:
           type: string
         state:
@@ -789,14 +786,14 @@ components:
       type: object
       properties:
         question:
-          $ref: "#/components/schemas/ID"
+          type: integer
         candidate:
           type: string
       required:
         - question
         - candidate
       example:
-        question: 6220e27c5f06ce6366456650
+        question: 14
         candidate: Alice
     BallotSpecList:
       type: array
@@ -857,16 +854,45 @@ components:
         - R
         - Z
         - pwf
-    UnconfirmedReceipt:
+    UnconfirmedReceiptStub:
       type: object
       properties:
         ballot_id:
           type: integer
-          example: 12345
         election_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         question_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
+        state:
+          type: string
+          description: Always "Unconfirmed".
+        confirmation_code:
+          type: string
+        signature:
+          type: string
+      required:
+        - ballot_id
+        - election_id
+        - question_id
+        - state
+        - confirmation_code
+        - signature
+      example:
+        ballot_id: 12345
+        election_id: 123
+        question_id: 55
+        state: "Unconfirmed"
+        confirmation_code: "YNEDDW2KR3P2IWCIQK2PWL2265YODQFDXLKNBRT3A64AT2T3V2"
+        signature: "z2wqVsRsmXxWybZaUaW5ooHl0hlfVGH-Hy8ARAzQfe4p__ewCTvptUWt94dwQMFhoMvMtlexxSzGkPBm0AvIUQ"
+    UnconfirmedReceiptFull:
+      type: object
+      properties:
+        ballot_id:
+          type: integer
+        election_id:
+          type: integer
+        question_id:
+          type: integer
         state:
           type: string
           description: Always "Unconfirmed".
@@ -896,8 +922,8 @@ components:
         - pwf
       example:
         ballot_id: 12345
-        election_id: 6220e27fbacbe75634ff900
-        question_id: 6220e27fbacbe75634ff901
+        election_id: 56
+        question_id: 578
         state: "Unconfirmed"
         confirmation_code: "YNEDDW2KR3P2IWCIQK2PWL2265YODQFDXLKNBRT3A64AT2T3V2"
         signature: "z2wqVsRsmXxWybZaUaW5ooHl0hlfVGH-Hy8ARAzQfe4p__ewCTvptUWt94dwQMFhoMvMtlexxSzGkPBm0AvIUQ"
@@ -929,9 +955,9 @@ components:
           type: integer
           example: 12345
         election_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         question_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         state:
           type: string
           description: Always "Audited".
@@ -961,8 +987,8 @@ components:
         - pwf
       example:
         ballot_id: 12345
-        election_id: 6220e27fbacbe75634ff900
-        question_id: 6220e27fbacbe75634ff901
+        election_id: 34
+        question_id: 9
         state: "Audited"
         confirmation_code: "YNEDDW2KR3P2IWCIQK2PWL2265YODQFDXLKNBRT3A64AT2T3V2"
         signature: "z2wqVsRsmXxWybZaUaW5ooHl0hlfVGH-Hy8ARAzQfe4p__ewCTvptUWt94dwQMFhoMvMtlexxSzGkPBm0AvIUQ"
@@ -998,9 +1024,9 @@ components:
           type: integer
           example: 12345
         election_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         question_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         state:
           type: string
           description: Always "Confirmed".
@@ -1030,8 +1056,8 @@ components:
         - pwf
       example:
         ballot_id: 12345
-        election_id: 6220e27fbacbe75634ff900
-        question_id: 6220e27fbacbe75634ff901
+        election_id: 4356
+        question_id: 11
         state: "Confirmed"
         confirmation_code: "YNEDDW2KR3P2IWCIQK2PWL2265YODQFDXLKNBRT3A64AT2T3V2"
         signature: "z2wqVsRsmXxWybZaUaW5ooHl0hlfVGH-Hy8ARAzQfe4p__ewCTvptUWt94dwQMFhoMvMtlexxSzGkPBm0AvIUQ"
@@ -1061,14 +1087,14 @@ components:
       description: Object map from candidate names to cryptographic totals.
       example:
         Alice:
-          election_id: 6220f19eac8b8ef619e64b47
-          question_id: 6220f19eac8b8ef619e64b43
+          election_id: 7
+          question_id: 234
           candidate_name: Alice
           tally: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI
           r_sum: sMKVUojysFflEY47ebE-9XmrRVtmPjQcpeLm33TUIxk
         Bob:
-          election_id: 6220f19eac8b8ef619e64b47
-          question_id: 6220f19eac8b8ef619e64b43
+          election_id: 34
+          question_id: 44
           candidate_name: Bob
           tally: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM
           r_sum: qJk5LeSZZcwnuvXKo0nbZ0g8k0a0dVb_Qw05FkmMoXI
@@ -1079,7 +1105,7 @@ components:
           type: integer
           example: 12345
         question_id:
-          $ref: "#/components/schemas/ID"
+          type: integer
         signature:
           type: string
       required:
@@ -1088,7 +1114,7 @@ components:
         - signature
       example:
         ballot_id: 12345
-        question_id: 6220e27fbacbe75634ff901
+        question_id: 5
         signature: "z2wqVsRsmXxWybZaUaW5ooHl0hlfVGH-Hy8ARAzQfe4p__ewCTvptUWt94dwQMFhoMvMtlexxSzGkPBm0AvIUQ"
     BallotRecallList:
       type: array
